sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value lgr
  var ecart=lgr/2
            ^